--- a/.github/workflows/terr.yml
+++ b/.github/workflows/terr.yml
@@ -1,3 +1,12 @@
+name: Terraform Apply
+on: [push]
+
+jobs:
+    terraform_apply:
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v3
+
 - name: Verify Terraform version
       run: terraform --version
 
